crates/llvmkit-ir/tests/compile_fail/call_void_no_return_accessor.stderr
error[E0599]: no method named `return_int_value` found for struct `CallInst<'_, (), Brand<'_>>` in the current scope
  --> tests/compile_fail/call_void_no_return_accessor.rs:27:22
   |
27 |         let _ = inst.return_int_value();
   |                      ^^^^^^^^^^^^^^^^
   |
help: there is a method `return_value` with a similar name
   |
27 -         let _ = inst.return_int_value();
27 +         let _ = inst.return_value();
   |
